--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,3 +51,7 @@ dependencies {
   testImplementation Libs.robolectric
   testImplementation Libs.truth
 }
+
+androidExtensions {
+  experimental = true
+}
